<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/unsplash"
    android:layout_height="match_parent"
    tools:context=".view.splash.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splash1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_splash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splash2"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_splash3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splash3"
        android:textSize="17sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/text_splash2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_splash4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splash4"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/text_splash3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_splash5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splash5"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/text_splash4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_splash"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:text="@string/btn_splash"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:background="@drawable/background_button"
        app:layout_constraintTop_toBottomOf="@id/text_splash5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>