<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Fragment.acc.AccFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:src="@drawable/rectangleg"
        android:contentDescription="@string/splash"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/app_logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/nama_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nama_user" />

        <TextView
            android:id="@+id/email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_splash"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/log_out"
            android:layout_marginTop="300dp"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>